--- a/style.css
+++ b/style.css
@@ -142,11 +142,7 @@ a:hover{
     box-sizing: border-box;
     min-height: fit-content;
   }
-  .section-container {
-    display: flex;
-  }
-  
-
+ 
   /* PROFILE SECTION */
   #profile {
     display: flex;
@@ -177,7 +173,7 @@ a:hover{
     text-align: center;
   }
   .section__text__p2{
-    font-size: 1.75rem;
+    font-size: 2.5rem;
     margin-bottom: 1rem;
   }
   .title {
@@ -242,3 +238,161 @@ a:hover{
     gap: 1rem;
   }
   
+  /* ABOUT */
+
+  .section-container {
+    display: flex;
+  }
+
+  #about {
+    position: relative;
+  }
+
+  .about-containers,
+  .about-details-container {
+    display: flex;
+  }
+  .about-containers {
+    gap: 2rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+  }
+  .about-details-container {
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .about-pic {
+    border-radius: 2rem;
+  }
+
+  .arrow {
+    position: absolute;
+    right: -5rem;
+    bottom: 2.5rem;
+  }
+
+  .details-container {
+    padding: 1.5rem;
+    flex: 1;
+    background: white;
+    border-radius: 2rem;
+    border: rgb(53,53,53) 0.1rem solid;
+    border-color: rgb(163,163,163);
+    text-align: center;
+  }
+
+  .section-container {
+    gap: 4rem;
+    height: 80%;
+  }
+  .section__pic-container {
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
+  }
+
+  /* EXPERIENCE */
+
+  #experiance {
+    position: relative;
+  }
+
+  .experiance-sub-title {
+    color: rgb(85,85,85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+  }
+
+  .article-container {
+    display: flex;
+    align-items: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
+  }
+
+  article {
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    /* gap: 0.1rem; */
+  }
+  article .icon {
+    cursor: default;
+  }
+
+  /* PROJECTS */
+
+  #projects {
+    position: relative;
+  }
+
+  .color-container {
+    border-color: rgb(163,163,163);
+    background: rgb(250,250,250);
+  }
+  .project-image {
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
+  }
+
+  .project-title {
+    margin: 1rem;
+    color: black;
+  }
+  .project-btn {
+    color: black;
+    border-color: rgb(163,163,163);
+  }
+
+
+  /* CONTACT */
+  #contacts {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+  }
+
+  .contact-info-upper-container {
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53,53,53) 0.1rem solid;
+    background: (250,250,250);
+    margin: 2rem auto;
+    padding: 0.5rem;
+  }
+
+  .contact-info-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+  }
+
+  .contact-info-container p {
+    font-size: larger;
+  }
+
+  .contact-icon {
+    cursor: default;
+  }
+
+  .email-icon {
+    height: 2.5rem;
+  }
+
+  /* FOOTER */
+  footer {
+    height: 26vh;
+    margin: 0 1rem;
+  }
+  footer p {
+    text-align: center;
+  }
